--- a/microservice-real-estate/src/main/resources/application.properties
+++ b/microservice-real-estate/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.application.name=real-state-service
 server.port=8788
+
+# config db
+spring.datasource.url=jdbc:mysql://localhost:3306/real_state_db?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=gibb
+
+# config jpa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+
+eureka.client.enable=false
+
