--- a/microservice-real-estate/src/main/resources/application.properties
+++ b/microservice-real-estate/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 eureka.client.enable=false
 
+service.security.secure-key-username=!KeySecureUsername<>%$
+service.security.secure-key-password=!KeySecurePassword<>%$
+
