--- a/microservice-real-estate/src/main/resources/application.properties
+++ b/microservice-real-estate/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=real-state-service
+spring.application.name=real-estate-service
 server.port=3333
 
 # config db
-spring.datasource.url=jdbc:mysql://localhost:3306/real_state_db?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/real_estate_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=gibb
 
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
-eureka.client.enable=false
+eureka.client.enabled=false
 
 service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
