--- a/microservice-purchase/src/main/resources/application.properties
+++ b/microservice-purchase/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 eureka.client.enabled=false
+
+service.security.secure-key-username=!PurchaseKeySecureUsername<>%/
+service.security.secure-key-password=!PurchaseKeySecurePassword<>%/
