--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.application.name=api-gateway-service
+server.port=5555
 
+spring.datasource.url=jdbc:mysql://localhost:3305/db_gateway?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=gibb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+
+eureka.client.enabled=false
