modified localhost postgres

--- a/microservice-purchase/src/main/resources/application.properties
+++ b/microservice-purchase/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=purchase-service
 server.port=4444
 
 # config db
-spring.datasource.url=jdbc:postgresql://localhost/purchase_db?serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5433/purchase_db?serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=246
 
