added the secret key to decrypt the token on the server, and also the expiration of the token

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 eureka.client.enabled=false
+
+app.jwt.secret=RandomSecretKey1223456789!RandomSecretKey1223456789!RandomSecretKey1223456789!
+
+app.jwt.expiration-in-ms=86400000
