--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway-service
 server.port=5555
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_gateway?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/gateway_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=gibb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
