add a username and password

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -16,3 +16,7 @@ eureka.client.enabled=false
 app.jwt.secret=RandomSecretKey1223456789!RandomSecretKey1223456789!RandomSecretKey1223456789!
 
 app.jwt.expiration-in-ms=86400000
+
+
+service.security.secure-key-username=!KeySecureUsername<>%$
+service.security.secure-key-password=!KeySecurePassword<>%$
