--- a/microservice-purchase/src/main/resources/application.properties
+++ b/microservice-purchase/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 eureka.client.enabled=false
 
-service.security.secure-key-username=!PurchaseKeySecureUsername<>%/
-service.security.secure-key-password=!PurchaseKeySecurePassword<>%/
+service.security.secure-key-username=!KeySecureUsername<>%$
+service.security.secure-key-password=!KeySecurePassword<>%$
