--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -20,3 +20,6 @@ app.jwt.expiration-in-ms=86400000
 
 service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
+
+
+real-estate-service-url=http://localhost:3333
