--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,4 +22,4 @@ service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
 
 
-real-estate-service-url=http://localhost:3333
+real-estate.service.url=http://localhost:3333
