added the base url that microservice-purchase runs on

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,3 +23,4 @@ service.security.secure-key-password=!KeySecurePassword<>%$
 
 
 real-estate.service.url=http://localhost:3333
+purchase.service.url=http://localhost:4444
