the eureka client is enabled, as well as the URL of the eureka server to which the eureka client should connect for service registration and discovery is specified.

--- a/microservice-purchase/src/main/resources/application.properties
+++ b/microservice-purchase/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8761
 
 service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
