--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
-eureka.client.enabled=false
+eureka.client.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8761
 
 app.jwt.secret=RandomSecretKey1223456789!RandomSecretKey1223456789!RandomSecretKey1223456789!
 
