added /eureka in URL

--- a/microservice-real-estate/src/main/resources/application.properties
+++ b/microservice-real-estate/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 eureka.client.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
