we comment the base urls of the two microservices, since they are being replaced by the name of each service that eureka is giving us

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,5 +23,5 @@ service.security.secure-key-username=!KeySecureUsername<>%$
 service.security.secure-key-password=!KeySecurePassword<>%$
 
 
-real-estate.service.url=http://localhost:3333
-purchase.service.url=http://localhost:4444
+#real-estate.service.url=http://localhost:3333
+#purchase.service.url=http://localhost:4444
