most of the configuration is cleaned up, since a centralized solution (Config Server) has been provided to store multiple configurations, it simplifies and improves configuration management in a microservices environment.

--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,18 +1,8 @@
 spring:
   application:
     name: eureka-server
-
-server:
-  port: 8761
-
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  config:
+    import: optional:configserver:http://localhost:8888
 
 
 
