--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   application:
     name: api-gateway-service
-
-server:
-  port: 5555
+  config:
+    import: optional:configserver:http://localhost:8888
 
