--- a/microservice-purchase/src/main/resources/application.yml
+++ b/microservice-purchase/src/main/resources/application.yml
@@ -1,5 +1,33 @@
+server:
+  port: 4444
+
 spring:
   application:
     name: purchase-service
-  config:
-    import: optional:configserver:http://localhost:8888
+  datasource:
+    url: jdbc:postgresql://localhost:5433/purchase_db?serverTimezone=UTC
+    username: postgres
+    password: 246
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    database: postgresql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+service:
+  security:
+    secure-key-username: !KeySecureUsername<>%$
+    secure-key-password: !KeySecurePassword<>%$
