--- a/microservice-real-estate/src/main/resources/application.yml
+++ b/microservice-real-estate/src/main/resources/application.yml
@@ -1,8 +1,36 @@
+server:
+  port: 3333
+
 spring:
   application:
     name: real-estate-service
-  config:
-    import: optional:configserver:http://localhost:8888
+  datasource:
+    url: jdbc:mysql://localhost:3306/real_estate_db?serverTimezone=UTC
+    username: root
+    password: gibb
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+    hibernate:
+      ddl-auto: update
+
+
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+service:
+  security:
+    secure-key-username: !KeySecureUsername<>%$
+    secure-key-password: !KeySecurePassword<>%$
 
 
 
